# fracdiff

./: pyproject.toml
examples/: example_exercise.ipynb
fracdiff/sklearn/: fracdiff.py  fracdiffstat.py
