[project]
name = "fracdiff"
version = "0.9.1"
description = "Super-fast fractional differentiation."
requires-python = ">=3.13"
license = "BSD-3-Clause"
authors = [{ name = "Shota Imaki", email = "shota.imaki.0801@gmail.com" }]
dependencies = [
    "numpy>=2.4.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "torch>=2.12.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
]
